--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,8 @@ jobs:
       stage: test
       env:
         - TRAVIS_JOB=test_py36_in_docker
-        - PYTEST_ADDOPTS="-rsxX -n 2 --durations=25 --fixture-durations=10 --junit-xml=pytest.xml --cov-report= --cov metagenomics --cov taxon_filter --cov kmer_utils --cov classify"
+        #- PYTEST_ADDOPTS="-rsxX -n 2 --durations=25 --fixture-durations=10 --junit-xml=pytest.xml --cov-report= --cov metagenomics --cov taxon_filter --cov kmer_utils --cov classify"
+        - PYTEST_ADDOPTS="-rsxX --durations=25 --fixture-durations=10 --junit-xml=pytest.xml --cov-report= --cov metagenomics --cov taxon_filter --cov kmer_utils --cov classify"
       install:
         - DOCKER_TAG=`travis/list-docker-tags.sh | tail -1`
         - echo "pulling $DOCKER_TAG"
